[package]
name = "temporal-cortex-toon-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WASM bindings for TOON encoder/decoder"
publish = false

[lib]
name = "toon_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
toon-core = { path = "../temporal-cortex-toon", package = "temporal-cortex-toon" }
wasm-bindgen = { workspace = true }
