[package]
name = "truth-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Deterministic calendar computation for AI agents: RRULE expansion, availability merging, timezone conversion, and temporal resolution"
readme = "README.md"
keywords = ["rrule", "calendar", "timezone", "datetime", "availability"]
categories = ["date-and-time"]

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
rrule = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
